<resources>
    <string name="app_name">区动体育</string>
    <string name="sport">运动</string>
    <string name="machine">矿机</string>
    <string name="mine">我</string>
    <string name="search_keyword">搜索关键词</string>
    <string name="total_mileage">总里程（M）</string>
    <string name="teach_video">教学视频</string>
    <string name="expand_all">展开全部</string>
    <string name="event_area">活动专区</string>
</resources>
