<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.qudong.sport.android.ui.main.HomeActivity">

    <com.qudong.sport.android.view.CustomViewpager
        android:id="@+id/vp_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <include
        android:id="@+id/divider"
        layout="@layout/view_divider" />

    <RadioGroup
        android:id="@+id/rg_main_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_main_tab_sport"
            style="@style/home_tab"
            android:drawableTop="@drawable/tab_sport"
            android:text="@string/sport" />

        <RadioButton
            android:id="@+id/rb_main_tab_machine"
            style="@style/home_tab"
            android:drawableTop="@drawable/tab_machine"
            android:text="@string/machine" />

        <RadioButton
            android:id="@+id/rb_main_tab_mine"
            style="@style/home_tab"
            android:drawableTop="@drawable/tab_mine"
            android:text="@string/mine" />
    </RadioGroup>


</LinearLayout>
