<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="0.0"
                        android:textColor="@color/colorAccent"
                        android:textSize="70dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/total_mileage"
                        android:textColor="@color/text_color_label"
                        android:textSize="@dimen/second_text_size" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@mipmap/icon_sport_total_time"
                                android:drawablePadding="3dp"
                                android:gravity="center"
                                android:text="总时长："
                                android:textColor="@color/text_color_label"
                                android:textSize="@dimen/second_text_size" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="01:00"
                                android:textColor="@color/colorAccent"
                                android:textSize="@dimen/second_text_size" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@mipmap/icon_sport_total_rank"
                                android:drawablePadding="3dp"
                                android:gravity="center"
                                android:text="总排名："
                                android:textColor="@color/text_color_label"
                                android:textSize="@dimen/second_text_size" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="第1名"
                                android:textColor="@color/color_text_rank"
                                android:textSize="@dimen/second_text_size" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <include layout="@layout/view_divider" />

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_divider"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/text_padding"
                    android:paddingTop="@dimen/text_margin"
                    android:text="@string/teach_video"
                    android:textColor="@color/text_color_label"
                    android:textSize="@dimen/second_text_size" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_tech_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_divider"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/text_padding"
                    android:paddingTop="@dimen/text_margin"
                    android:text="@string/event_area"
                    android:textColor="@color/text_color_label"
                    android:textSize="@dimen/second_text_size" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="@dimen/text_padding"
                    android:text="@string/expand_all"
                    android:textColor="@color/text_color_label"
                    android:textSize="@dimen/second_text_size" />

            </LinearLayout>
        </ScrollView>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</LinearLayout>